# DVD_Yesness

./: pyproject.toml  yes.py
src/DVD_Yesness/: __init__.py  vibe_coded_but_better.py
